fix: some of adminPage added