@@ -1,8 +1,12 @@
 package com.karrotmvp.ourapt.v1.article;
 
 import com.karrotmvp.ourapt.v1.article.dto.QuestionDto;
+import com.karrotmvp.ourapt.v1.article.dto.QuestionFormDto;
 import com.karrotmvp.ourapt.v1.article.entity.Question;
+import com.karrotmvp.ourapt.v1.common.Utils;
 import com.karrotmvp.ourapt.v1.user.User;
+import com.karrotmvp.ourapt.v1.user.UserService;
+import com.karrotmvp.ourapt.v1.user.dto.KarrotOApiUserDto;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -20,10 +24,13 @@ public class QuestionService {
     private QuestionRepository questionRepository;
 
     @Autowired
+    private UserService userService;
+
+    @Autowired
     private ModelMapper modelMapper;
 
     @Transactional
-    public void writeNewQuestion(QuestionDto questionInfo, User writer) {
+    public void writeNewQuestion(QuestionFormDto questionInfo, User writer) {
         Question question = modelMapper.map(questionInfo, Question.class);
         question.setWriter(writer);
         this.questionRepository.save(question);
@@ -34,8 +41,28 @@ public class QuestionService {
         return questions.stream().map(q -> modelMapper.map(q, QuestionDto.class)).collect(Collectors.toList());
     }
 
+    public long getCountOfAllQuestions() {
+        return this.questionRepository.count();
+    }
+
+    public long getCountOfNotEmptyQuestions() {
+        return this.questionRepository.countByMainTextNot("");
+    }
+
     public List<QuestionDto> getQuestionsWithOffsetPaging(int perPage, int pageNum) {
-        List<Question> questions = questionRepository.findAll(PageRequest.of(pageNum, perPage)).toList();
-        return questions.stream().map(q -> modelMapper.map(q, QuestionDto.class)).collect(Collectors.toList());
+        List<QuestionDto> questions = questionRepository.findByOrderByCreatedAtDesc(PageRequest.of(pageNum, perPage))
+                .stream()
+                .map(q -> modelMapper.map(q, QuestionDto.class))
+                .collect(Collectors.toList());
+        List<KarrotOApiUserDto> writers = this.userService.getKarrotUserProfilesByIds(
+                questions.stream().map(q -> q.getWriter().getId()).collect(Collectors.toSet())
+        );
+        return Utils.leftOuterHashJoin(
+                questions,
+                writers,
+                (q) -> q.getWriter().getId(),
+                KarrotOApiUserDto::getId,
+                QuestionDto::setWriter
+        );
     }
 }
